Closed Bug 1604956 Opened 6 years ago Closed 6 years ago

Crash in [@ nsLayoutUtils::HasPaintedDisplayPort]

Categories

(Core :: Panning and Zooming, defect)

Unspecified
Windows 10
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox-esr68 --- unaffected
firefox71 --- unaffected
firefox72 --- unaffected
firefox73 --- fixed

People

(Reporter: marcia, Assigned: botond)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-1c590cd9-cf82-4a6e-8f0e-ec5ec0191218.

Seen while looking at nightly crash stats - crashes started in 20191217104440: https://bit.ly/2EyqyTO

Possible regression range based on build ID: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=0016ade97e65a470bc97521ab8338210e74cdd02&tochange=930ad6def3c7961c82b2af20b66be3351603684f

Bug 1601568? ni on :botond

Top 10 frames of crashing thread:

0 xul.dll static nsLayoutUtils::HasPaintedDisplayPort layout/base/nsLayoutUtils.cpp:1160
1 xul.dll mozilla::layers::`anonymous namespace'::PrepareForSetTargetAPZCNotification gfx/layers/apz/util/APZCCallbackHelper.cpp:722
2 xul.dll static mozilla::layers::APZCCallbackHelper::SendSetTargetAPZCNotification gfx/layers/apz/util/APZCCallbackHelper.cpp
3 xul.dll mozilla::dom::BrowserChild::HandleRealMouseButtonEvent dom/ipc/BrowserChild.cpp:1715
4 xul.dll mozilla::dom::BrowserChild::ProcessPendingCoalescedMouseDataAndDispatchEvents dom/ipc/BrowserChild.cpp:1578
5 xul.dll mozilla::dom::BrowserChild::RecvRealMouseButtonEvent dom/ipc/BrowserChild.cpp:1696
6 xul.dll mozilla::dom::PBrowserChild::OnMessageReceived ipc/ipdl/PBrowserChild.cpp:5295
7 xul.dll mozilla::dom::PContentChild::OnMessageReceived ipc/ipdl/PContentChild.cpp:8250
8 xul.dll mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2134
9 xul.dll mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:2004

Flags: needinfo?(botond)

Will take a look.

Assignee: nobody → botond
Flags: needinfo?(botond)
Pushed by bballo@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d502bccf7715 Avoid calling HasPaintedDisplayPort() with a null content element. r=tnikkel
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: