Bug 1604956 - Avoid calling HasPaintedDisplayPort() with a null content element. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D57719